# plato-dashboard

./: AGENT.md  Cargo.toml  DEPENDENCIES.md  DEVELOPER_GUIDE.md  PLUG_AND_PLAY.md  README.md  TUTORIAL.md
memory/: JOURNAL.md
src/: alarm_panel.rs  dashboard.rs  fleet_panel.rs  lib.rs  main.rs  render.rs  room_panel.rs  sparkline.rs
