[package]
name = "plato-dashboard"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Fleet dashboard rendering for PLATO nervous system"
repository = "https://github.com/SuperInstance/plato-dashboard"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
